added some changes to the little dude

--- a/application/index.html
+++ b/application/index.html
@@ -115,11 +115,15 @@
                     to
                     more than 50,000 students across 17 countries.
                 </p>
+                <img id="s3-dude" src="svg/uhoh.svg">
             </div>
         </div>
         <div class="section-filler"></div>
     </div>
-    <div id="floor"></div>
+    <div id="floor">
+        <img id="derp" src="svg/derp.svg">
+        <img class="ladder" src="svg/ladder.svg">
+    </div>
 
     <script src="scripts/jquery-3.5.1.min.js"></script>
     <script src="scripts/jquery.waypoints.js"></script>
