added the remaining pictures

--- a/application/index.html
+++ b/application/index.html
@@ -17,14 +17,20 @@
     <div id="banner" class="container-fluid bg-dark align-items-end">
         <h1>The Future of Banking?</h1>
     </div>
-
-    <div id="sky" class="container-fluid ">
+    <div id="sky" class="container-fluid">
         <div class="row position-relative">
-            <div id="pig-card" class="col-lg-6 card card-body border-0 align-items-center">
-                <p class="">We all want to reach our financial goals...</p>
-                <img id="pig-pic" src="svg/piggy-bank.svg">
+            <div class="end-text">
+                <p class="container">Economic inequity in various countries around the world is becoming a common reality as the rich get
+                richer, the poor get poorer, and the middle-class stay where they are. The wealth gap is not an easy
+                issue to solve, but the future of banking and the services provided by banks, while leveraging
+                technology, can play a significant role in reducing the wealth gap.</p>
             </div>
-            <div class="col-lg-6 card card-body align-items-center justify-content-center border-0">
+            <div id="pig-card" class="col-lg-6 card card-body border-0 align-items-center">
+                <p class=" sky-area">We all want to reach our financial goals...</p>
+                <img id="pig-pic" class=" sky-area" src="svg/piggy-bank.svg">
+                <img class="waving" src="svg/waving.svg">
+            </div>
+            <div class="col-lg-6 card card-body align-items-center justify-content-center border-0 sky-area">
                 <p class="mx-auto">But we don’t always start at the same place do we?</p>
                 <a id="scroll-button" class="btn btn-primary">Do we?</a>
             </div>
@@ -86,6 +92,9 @@
                     affordable, and high-quality financial services.
                 </p>
             </div>
+            <img id="s2-climbing" class="s1" src="svg/climbing.svg">
+            <img id="s2-ladder" class="s1" src="svg/ladder.svg">
+            <img id="s2-dude" class="s1" src="svg/uhoh.svg">
         </div>
         <div class="s3 section">
             <div class="card card-body">
@@ -115,8 +124,11 @@
                     to
                     more than 50,000 students across 17 countries.
                 </p>
-                <img id="s3-dude" src="svg/uhoh.svg">
             </div>
+            <img id="s3-climbing" class="s2" src="svg/climbing.svg">
+            <img id="s3-ladder" class="s2" src="svg/ladder.svg">
+            <img class="s3 s3-dude" src="svg/uhoh.svg">
+
         </div>
         <div class="section-filler"></div>
     </div>
